--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div id="result">Loading...</div>
 
   <script type="text/javascript">
-    const URL = "model/";
+    const URL = "";
     let model, webcam, labelContainer;
 
     const calorieTable = {
