--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div id="result">Loading...</div>
 
   <script type="text/javascript">
-    const URL = "";
+    const URL = "./";
     let model, webcam, labelContainer;
 
     const calorieTable = {
