--- a/index.html
+++ b/index.html
@@ -3,25 +3,39 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Fruit Classifier</title>
-  <!-- Библиотеки -->
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8.3/dist/teachablemachine-image.min.js"></script>
+  <title>Fruit & Food Classifier</title>
+
+  <!-- TensorFlow.js и TeachableMachine библиотеките -->
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8.3/dist/teachablemachine-image.min.js"></script>
+
   <style>
     body {
       font-family: Arial, sans-serif;
       text-align: center;
-      background: #f0f0f0;
+      background: #f8f8f8;
       padding: 20px;
     }
-    video {
-      border: 4px solid #333;
-      border-radius: 10px;
+
+    h1 {
+      font-size: 2em;
       margin-bottom: 20px;
     }
+
+    #webcam-container {
+      margin: 0 auto;
+      border: 4px solid #333;
+      border-radius: 10px;
+      width: fit-content;
+      margin-bottom: 20px;
+    }
+
+    canvas {
+      border-radius: 10px;
+    }
+
     #result {
       font-size: 1.5em;
-      margin-top: 10px;
       background: #fff;
       display: inline-block;
       padding: 10px 20px;
@@ -33,12 +47,13 @@
 <body>
 
   <h1>🍎 Food & Fruit Classifier</h1>
-  <video id="webcam" autoplay playsinline width="224" height="224"></video>
+  <div id="webcam-container"></div>
   <div id="result">Loading...</div>
 
   <script type="text/javascript">
-    const URL = "./";
-    let model, webcam, labelContainer;
+    const URL = "./"; 
+
+    let model, webcam;
 
     const calorieTable = {
       "Egg": 155,
@@ -60,16 +75,15 @@
       const metadataURL = URL + "metadata.json";
 
       model = await tmImage.load(modelURL, metadataURL);
-      webcam = new tmImage.Webcam(224, 224, true);
-      await webcam.setup();
+      webcam = new tmImage.Webcam(224, 224, true); // размер и огледален образ
+      await webcam.setup(); // изисква разрешение
       await webcam.play();
+      document.getElementById("webcam-container").appendChild(webcam.canvas);
       window.requestAnimationFrame(loop);
-
-      document.getElementById("webcam").appendChild(webcam.canvas);
     }
 
     async function loop() {
-      webcam.update();
+      webcam.update(); // актуализира кадъра
       await predict();
       window.requestAnimationFrame(loop);
     }
@@ -89,5 +103,6 @@
 
     init();
   </script>
+
 </body>
 </html>
