--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>NutriVision - Smart Food Analyzer</title>
+  <title>HealthyLife - Smart Food Analyzer</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
@@ -475,7 +475,7 @@
           <span class="bg hidden">English</span>
         </button>
       </div>
-      <h1><i class="fas fa-utensils"></i> <span class="en">NutriVision</span><span class="bg hidden">НутроВизия</span></h1>
+      <h1><i class="fas fa-utensils"></i> <span class="en">HealthyLife</span><span class="bg hidden">HealthyLife</span></h1>
       <p class="subtitle en">Smart food recognition with nutritional analysis</p>
       <p class="subtitle bg hidden">Интелигентно разпознаване на храна с хранителен анализ</p>
     </div>
